syntax = "proto3";

option go_package = "plcontrollerapi";

import "github.com/NEU-SNS/ReverseTraceroute/datamodel/ping.proto";
import "github.com/NEU-SNS/ReverseTraceroute/datamodel/traceroute.proto";
import "github.com/NEU-SNS/ReverseTraceroute/datamodel/vantagepoint.proto";
import "github.com/NEU-SNS/ReverseTraceroute/datamodel/recspoof.proto";

service PLController {

    rpc Ping(datamodel.PingArg) returns (stream datamodel.Ping) {}
    rpc Traceroute(datamodel.TracerouteArg) returns (stream datamodel.Traceroute) {}
    rpc ReceiveSpoof(datamodel.RecSpoof) returns (stream datamodel.NotifyRecSpoofResponse) {}
    rpc GetVPs(datamodel.VPRequest) returns (stream datamodel.VPReturn) {}
    rpc AcceptProbes(datamodel.SpoofedProbes) returns (datamodel.SpoofedProbesResponse) {}
}
